can obtain youtube thumbnail and video id

--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -8,7 +8,8 @@ div.stream-index {
     width: 100%;
 
     li {
-      background: blue;
+      background: transparent;
+      border: 1px solid black;
       margin: 20px;
       width: 270px;
       height: 270px;
