--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -1,3 +1,7 @@
+div.main {
+  background: #182227;
+}
+
 div.stream-index {
   margin: 0 auto;
   width: 1500px;
@@ -6,6 +10,7 @@ div.stream-index {
     display: flex;
     flex-wrap: wrap;
     width: 100%;
+    justify-content: space-between;
 
     li.thumbnail {
       display: flex;
@@ -28,5 +33,17 @@ div.stream-index {
         }
       }
     }
+  }
+}
+
+div.login {
+  display: flex;
+
+  div.logout {
+    background-image: asset-url('logout.png');
+    background-size: contain;
+    background-repeat: no-repeat;
+    width: 50px;
+    height: 50px;
   }
 }
