--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -7,12 +7,14 @@
 }
 
 html, body, h1, h2, h3, h4, h5, h6, p, span, div, section, main, aside, article,
-ul, li, ol, span, figure {
+ul, li, ol, span, figure, nav, header, footer {
   padding: 0;
   border: 0;
   margin: 0;
 
   list-style: none;
 
-  font-family: Nova;
+  font-family: Roboto;
+
+  color: lightgray;
 }
