--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -18,3 +18,27 @@ ul, li, ol, span, figure, nav, header, footer {
 
   color: lightgray;
 }
+
+/* For the "inset" look only */
+
+
+/* Let's get this party started */
+::-webkit-scrollbar {
+    width: 10px;
+    background-color: transparent;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 0 transparent;
+    // -webkit-border-radius: 10px;
+    // border-radius: 10px;
+    background-color: transparent;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+    background: Gray;
+}
