--- a/app/assets/stylesheets/video.scss
+++ b/app/assets/stylesheets/video.scss
@@ -7,7 +7,7 @@ main.video-wrapper {
   width: 1300px;
   background: #182227;
   margin: auto;
-  padding: 50px;
+  padding: 20px 50px;
 
   display: flex;
 
@@ -75,11 +75,13 @@ main.video-wrapper {
 
 section.video-recommendations {
   margin: 0 auto;
+  width: 1400px;
+
+  h1 { margin-left: 50px }
 
   div.carousel-container {
-    margin: 0 auto;
     padding: 40px;
-    width: 80%;
+    width: 1300px;
     color: #333;
     background: #182227;
 
@@ -102,15 +104,62 @@ section.video-recommendations {
       display: flex;
       align-items: center;
       justify-content: center;
-      height: 280px;
-      width: 100%;
+      height: 235px;
+      overflow: hidden;
+
+      img {
+        width: 95%;
+      }
     }
   }
 }
 
-div.next-arrow, div.prev-arrow {
-  background-image: asset-url('arrow.png');
-  background-repeat: no-repeat;
-  width: 50px;
-  height: 50px;
+div.stream-options-wrapper {
+  margin: 0 50px;
+
+  div.stream-options {
+    width: 100%;
+    padding: 20px;
+
+    display: flex;
+  }
+
+  div.message-stats-wrapper {
+    display: flex;
+    flex-direction: column;
+
+    div.message-stats {
+      padding-bottom: 10px;
+    }
+  }
+
+  ul.user-search {
+    border-radius: 3px;
+    background: AliceBlue;
+    height: 200px;
+    width: 100%;
+    margin: 0 50px;
+    display: flex;
+    flex-direction: column;
+  }
+
+  input {
+    border: none;
+    border-bottom: 1px solid gray;
+    border-radius: 3px;
+    background: inherit;
+    padding: 6px;
+    font-size: 14px;
+    margin: 10px
+  }
+
+  input:focus {
+    outline: none;
+  }
+}
+
+div.border {
+  margin: 20px 80px;
+  background: lightgray;
+  height: 1px;
 }
