--- a/app/assets/stylesheets/navigation.scss
+++ b/app/assets/stylesheets/navigation.scss
@@ -9,6 +9,7 @@ header.home {
     justify-content: space-between;
     box-sizing: border-box;
     width: 1500px;
+    height: 50px;
     margin: auto;
     padding: 0 20px;
 
