--- a/app/assets/stylesheets/navigation.scss
+++ b/app/assets/stylesheets/navigation.scss
@@ -30,6 +30,10 @@ header.home {
       }
     }
 
+    li.login {
+      position: relative;
+    }
+
     li:first-child span {
       font-family: Poppins;
       font-size: 20px;
